:octocat: a bit of styling on messages. Not done yet still want to add scrolling and non overlapping will do that soon ish

--- a/public/stylesheets/socketstyle.css
+++ b/public/stylesheets/socketstyle.css
@@ -45,6 +45,16 @@ body {
 	list-style: none;
 }
 
+.nameSpan {
+	font-weight: bold;
+	color: #FF0000;
+}
+
+.dateSpan {
+	font-size: 12px;
+	color: #BABABA;
+}
+
 #chatTextArea {
 	resize: none;
 	width: 250px;
