--- a/public/stylesheets/socketstyle.css
+++ b/public/stylesheets/socketstyle.css
@@ -2,7 +2,7 @@
 body {
 	width: 100%;
 	color: #121212;
-	background-color: #E0E0E0;
+	background-color: #F0F0F0;
 	margin: 0px 0px 0px 0px;
 }
 
@@ -84,5 +84,16 @@ body {
  	border-style: none;
 	color: #FFFFFF;
 	font-weight: bold;
+}
+
+#ErrorArea {
+	width: 100%;
+	background-color: #F2DEDE;
+	color: #B94A48;
+	padding: 10px 25px;
+	margin-bottom: 10px;
+	border:4px solid;
+	border-radius:15px;
+	border-color: #CC0000;
 }
 
